THIS VERSION WILL REQUIRE A CLEAN INSTALL
Due to my grass changes, if you use mcpatcher this version and all future versions must be installed with mcpatcher and cannot be installed over it.

- Refactored the addon to use BTW Extended Addon API, allowing other addons to use the networking and reflection utilities which deco uses. This is provided as a separate download.
- Refactored file prefix to "Deco" rather than "Addon". This, and the below texture name change, were relics from Yhetti's development and have both been changed for clarity.
- Refactored texture names to make them more consistent, following BTW's naming scheme to use things such as decoBlockXXXX and removing ginger_ as the prefix. This means texture packs will need to update to use the new file names.
- Added localization support. Included with the addon in the lang folder is the file Deco_en_US.lang, which contains all english translations for the addon. Anyone who wishes to make and distribute translations is free to do so, and I will include it here if you link it.
- Added iron trapdoors, crafted with 4 iron ingots and 2 redstone latches, producing 2. They work just like iron doors and will only respond to redstone signals.
- Added spider eye blocks, created by packing 16 spider eyes together, and spider eye slabs. Thanks to Sockthing for these tetxures!
- Added the ability for fertilizer to spawn ferns.
- Added the ability for the block dispenser to use fertilizer on grass to spawn flowers. The block dispenser will also not immediately suck up flowers placed using fertilizer (but can still suck up flowers in other circumstances). This, combined with the recipe change below, allows for automated production of flowers and dye.
- Added the lily of the valley as a new type of flower, which can be ground down into 2 white dye.