@@ -268,68 +268,68 @@ public class DecoUtilsTrees {
 		}
 	}
 	
-	public boolean generateAcacia(World par1World, Random par2Random, int x, int y, int z)
+	public static boolean generateAcacia(World par1World, Random par2Random, int x, int y, int z)
 	{
 		int var5 = par1World.getBlockId(x, y - 1, z);
 		if (var5 != Block.grass.blockID)
 			return false;
 		int rand = 4 + par2Random.nextInt(3);
-		for(int i = 0; i < rand; i++) { par1World.setBlock(x, y + i, z, Block.wood.blockID); }
+		for(int i = 0; i < rand; i++) { par1World.setBlock(x, y + i, z, DecoDefs.acaciaLog.blockID); }
 
         //par1World.setBlockMetadataWithClient(x, y, z, metaWood | 12); // place stump
 
 		if(par2Random.nextInt(4) == 0) { //branch1
-			par1World.setBlock(x + 0, y + rand + 1, z + 1, Block.wood.blockID);
-			par1World.setBlock(x + 1, y + rand + 2, z + 2, Block.wood.blockID);
+			par1World.setBlock(x + 0, y + rand + 1, z + 1, DecoDefs.acaciaLog.blockID);
+			par1World.setBlock(x + 1, y + rand + 2, z + 2, DecoDefs.acaciaLog.blockID);
 			createAcaciaLeaves(par1World, par2Random, x + 1, y + rand + 2, z + 2, 3);
 			createAcaciaLeaves(par1World, par2Random, x + 1, y + rand + 3, z + 2, 2);
 		}
 
 		if(par2Random.nextInt(4) == 0) { //branch2
-			par1World.setBlock(x + 1, y + rand + 0, z + 0, Block.wood.blockID);
-			par1World.setBlock(x + 2, y + rand + 1, z + 0, Block.wood.blockID);
-			par1World.setBlock(x + 3, y + rand + 2, z - 1, Block.wood.blockID);
+			par1World.setBlock(x + 1, y + rand + 0, z + 0, DecoDefs.acaciaLog.blockID);
+			par1World.setBlock(x + 2, y + rand + 1, z + 0, DecoDefs.acaciaLog.blockID);
+			par1World.setBlock(x + 3, y + rand + 2, z - 1, DecoDefs.acaciaLog.blockID);
 			createAcaciaLeaves(par1World, par2Random, x + 3, y + rand + 3, z - 1, 3);
 			createAcaciaLeaves(par1World, par2Random, x + 3, y + rand + 4, z - 1, 2);
 		}
 
 		if(par2Random.nextInt(4) == 0) { //branch3
-			par1World.setBlock(x - 1, y + rand + 0, z + 0, Block.wood.blockID);
-			par1World.setBlock(x - 2, y + rand + 1, z + 0, Block.wood.blockID);
-			par1World.setBlock(x - 3, y + rand + 2, z - 1, Block.wood.blockID);
-			par1World.setBlock(x - 4, y + rand + 3, z - 2, Block.wood.blockID);
+			par1World.setBlock(x - 1, y + rand + 0, z + 0, DecoDefs.acaciaLog.blockID);
+			par1World.setBlock(x - 2, y + rand + 1, z + 0, DecoDefs.acaciaLog.blockID);
+			par1World.setBlock(x - 3, y + rand + 2, z - 1, DecoDefs.acaciaLog.blockID);
+			par1World.setBlock(x - 4, y + rand + 3, z - 2, DecoDefs.acaciaLog.blockID);
 			createAcaciaLeaves(par1World, par2Random, x - 4, y + rand + 4, z - 2, 3);
 			createAcaciaLeaves(par1World, par2Random, x - 4, y + rand + 5, z - 2, 2);
 		}
 
 		if(par2Random.nextInt(4) == 0) { //branch4
-			par1World.setBlock(x + 0, y + rand + 0, z - 1, Block.wood.blockID);
-			par1World.setBlock(x + 1, y + rand + 1, z - 2, Block.wood.blockID);
-			par1World.setBlock(x + 2, y + rand + 2, z - 2, Block.wood.blockID);
-			par1World.setBlock(x + 3, y + rand + 3, z - 2, Block.wood.blockID);
+			par1World.setBlock(x + 0, y + rand + 0, z - 1, DecoDefs.acaciaLog.blockID);
+			par1World.setBlock(x + 1, y + rand + 1, z - 2, DecoDefs.acaciaLog.blockID);
+			par1World.setBlock(x + 2, y + rand + 2, z - 2, DecoDefs.acaciaLog.blockID);
+			par1World.setBlock(x + 3, y + rand + 3, z - 2, DecoDefs.acaciaLog.blockID);
 			createAcaciaLeaves(par1World, par2Random, x + 3, y + rand + 3, z - 2, 3);
 			createAcaciaLeaves(par1World, par2Random, x + 3, y + rand + 4, z - 2, 2);
 		}
 
 		if(par2Random.nextInt(4) == 0) { //branch5
-			par1World.setBlock(x + 0, y + rand + 0, z - 1, Block.wood.blockID);
-			par1World.setBlock(x + 0, y + rand + 0, z - 2, Block.wood.blockID);
-			par1World.setBlock(x + 1, y + rand + 1, z - 3, Block.wood.blockID);
+			par1World.setBlock(x + 0, y + rand + 0, z - 1, DecoDefs.acaciaLog.blockID);
+			par1World.setBlock(x + 0, y + rand + 0, z - 2, DecoDefs.acaciaLog.blockID);
+			par1World.setBlock(x + 1, y + rand + 1, z - 3, DecoDefs.acaciaLog.blockID);
 			createAcaciaLeaves(par1World, par2Random, x + 1, y + rand + 1, z - 3, 3);
 			createAcaciaLeaves(par1World, par2Random, x + 1, y + rand + 2, z - 3, 2);
 		}
 
 		//branch6
-		par1World.setBlock(x - 0, y + rand + 0, z + 0, Block.wood.blockID);
-		par1World.setBlock(x - 0, y + rand + 1, z + 0, Block.wood.blockID);
-		par1World.setBlock(x - 0, y + rand + 2, z - 0, Block.wood.blockID);
+		par1World.setBlock(x - 0, y + rand + 0, z + 0, DecoDefs.acaciaLog.blockID);
+		par1World.setBlock(x - 0, y + rand + 1, z + 0, DecoDefs.acaciaLog.blockID);
+		par1World.setBlock(x - 0, y + rand + 2, z - 0, DecoDefs.acaciaLog.blockID);
 		createAcaciaLeaves(par1World, par2Random, x + 0, y + rand + 3, z - 0, 3);
 		createAcaciaLeaves(par1World, par2Random, x + 0, y + rand + 4, z - 0, 2);
 
 		return true;
 	}
 
-	private void createAcaciaLeaves(World par1World, Random par2Random, int x, int y, int z, int size)
+	private static void createAcaciaLeaves(World par1World, Random par2Random, int x, int y, int z, int size)
 	{
 		for(int x1 = -size + x; x1 < size + 1 + x; x1++)
 		{
@@ -339,10 +339,10 @@ public class DecoUtilsTrees {
 				if (var5 == 0)
 				{
 					if(x1 == -size + x && z1 == -size + z ){} else if(x1 == -size + x && z1 == size + z ){} else if(x1 == size + x && z1 == -size + z ){} else if(x1 == size + x && z1 == size + z ){}
-					else { par1World.setBlock(x1, y, z1, Block.leaves.blockID); }
+					else { par1World.setBlock(x1, y, z1, DecoDefs.acaciaLeaves.blockID); }
 				}
 			}
 		}
-		if(size==3){par1World.setBlock(x, y, z, Block.wood.blockID);}
+		if(size==3){par1World.setBlock(x, y, z, DecoDefs.acaciaLog.blockID);}
 	}
 }
